# controller/film.go
@@ -13,6 +13,15 @@ type FilmController struct {
 	filmService service.FilmService
 }
 
+// GetAll godoc
+// @Summary Get all films recorded
+// @Description Get all films recorded
+// @Tags film
+// @Accept  json
+// @Produce  json
+// @Param search query string false "Search film by title"
+// @Success 200 {object} model.Film
+// @Router /films [get]
 func (f *FilmController) GetAll(ctx *gin.Context) {
 	search := ctx.Query("search")
 	films := f.filmDAO.GetAll(ctx, search)
