# docs/swagger.json
@@ -8,6 +8,37 @@
         }
     },
     "paths": {
+        "/films": {
+            "get": {
+                "description": "Get all films recorded",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "film"
+                ],
+                "summary": "Get all films recorded",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search film by title",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Film"
+                        }
+                    }
+                }
+            }
+        },
         "/planets": {
             "get": {
                 "description": "Get all planets recorded",
@@ -21,6 +52,20 @@
                     "planet"
                 ],
                 "summary": "Get all planets recorded",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Search film by exactly name",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search film by exactly id",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -45,8 +90,19 @@
                     "planet"
                 ],
                 "summary": "Insert a new planet",
+                "parameters": [
+                    {
+                        "description": "Add Movie. Send without the key 'films'.",
+                        "name": "planet",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.AddPlanet"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
+                    "201": {
                         "description": "a",
                         "schema": {
                             "$ref": "#/definitions/model.Planet"
@@ -84,6 +140,12 @@
                             "type": "Registro"
                         }
                     },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "ObjectID"
+                        }
+                    },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
@@ -95,11 +157,57 @@
         }
     },
     "definitions": {
+        "model.AddPlanet": {
+            "type": "object",
+            "properties": {
+                "climate": {
+                    "type": "string",
+                    "example": "arid"
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Matheus"
+                },
+                "terrain": {
+                    "type": "string",
+                    "example": "desert"
+                }
+            }
+        },
+        "model.Film": {
+            "type": "object",
+            "properties": {
+                "director": {
+                    "type": "string"
+                },
+                "episode_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "id_reference": {
+                    "type": "integer"
+                },
+                "release_date": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Planet": {
             "type": "object",
             "properties": {
                 "climate": {
                     "type": "string"
+                },
+                "films": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Film"
+                    }
                 },
                 "id": {
                     "type": "string"
